fix overflow issue

--- a/client/src/css/PetCards.css
+++ b/client/src/css/PetCards.css
@@ -66,7 +66,7 @@
     background-color:lightblue;
     padding:5px;
     border-radius:15px;
-    width: 50%;
+    width: 75%;
     margin:10px auto;
     justify-content: center;
 }
